--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jspdf": "^2.0.0",
     "@types/node": "22.2.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "jspdf": "^2.5.2",
+    "n3": "^1.22.3",
     "next": "14.2.5",
     "postcss": "8.4.41",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.0",
     "tailwindcss": "3.4.9",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/n3": "^1.21.1",
+    "@types/uuid": "^10.0.0"
   }
 }
